added working links in project section

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                         <img src="assets/project6.PNG" alt="screenshot of lit tracker">
                     </div>
                     <div class="button-container">
-                        <button class="button"><a href="">Repo</a></button>
-                        <button class="button"><a href="">Live</a></button>
+                        <a href="https://github.com/lit-tracker-project-6/lit-tracker"><button class="button">Repo</button></a>
+                        <a href="https://lit-tracker.firebaseapp.com/"><button class="button">Live</button></a>
                     </div>
                 </div>
 
@@ -121,8 +121,8 @@
                         <img src="assets/project5.PNG" alt="screenshot of shouldIGetIt">
                     </div>
                     <div class="button-container">
-                        <button class="button"><a href="">Repo</a></button>
-                        <button class="button"><a href="">Live</a></button>
+                        <a href="https://github.com/dluudevs/derek-luu-project5"><button class="button">Repo</button></a>
+                        <a href="https://shouldigetit-3aad7.firebaseapp.com/"><button class="button">Live</button></a>
                     </div>
                 </div>
 
@@ -137,8 +137,8 @@
                         <img src="assets/project2.PNG" alt="screenshot of beachstay">
                     </div>
                     <div class="button-container">
-                        <button class="button"><a href="">Repo</a></button>
-                        <button class="button"><a href="">Live</a></button>
+                        <a href="https://github.com/dluudevs/derek-luu-project2"><button class="button">Repo</button></a>
+                        <a href="https://dluudevs.github.io/derek-luu-project2/"><button class="button">Live</button></a>
                     </div>
                 </div>
 
@@ -155,7 +155,7 @@
                     <input required type="email" id="email" placeholder="Email" name="email">
                     <label for="message" class="visuallyhidden">Message:</label>
                     <textarea placeholder="Message" name="messsage" id="message" cols="30" rows="5"></textarea>
-                    <button class="button" type="submit">Send</button>
+                    <button class="button" type="submit">Submit</button>
                 </form>
                 <div class="contact_icons">
                     <div class="contact_email">
