--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 <body>
     <header id="home">
@@ -31,7 +33,7 @@
         </div>
         <div class="fullbleed">
             <div class="wrapper">
-                <div class="intro">
+                <div class="intro" data-aos="fade-left" data-aos-duration="2250">
                     <h1><span class="hello">I am </span>Derek Luu </h1>
                     <span class="dev-life">Web Developer</span>
                 </div>
@@ -95,50 +97,56 @@
             <div class="wrapper">
                 <h2>Portfolio</h2>
 
-                <div class="project1 project_container">
+                <div class="project1 project_container" data-aos="fade-right">
                     <div class="project_textContainer">
                         <h3>Project 1</h3>
                         <p>Lit tracker allows you to create your very own book list. Sort your books by ratings, mark them as read or look at other people's list for inspiration!</p>
                         <p>HTML<span>/</span>CSS<span>/</span>Responsive Design<span>/</span>Javascript<span>/</span>React<span>/</span>Git<span>/</span>Firebase</p>
                     </div>
-                    <div class="project_imgContainer">
-                        <img src="assets/project6.PNG" alt="screenshot of lit tracker">
-                    </div>
-                    <div class="button-container">
-                        <a href="https://github.com/lit-tracker-project-6/lit-tracker"><button class="button">Repo</button></a>
-                        <a href="https://lit-tracker.firebaseapp.com/"><button class="button">Live</button></a>
+                    <div class="project_container_bottom" data-aos="fade-left">
+                        <div class="project_imgContainer">
+                            <img src="assets/project6.PNG" alt="screenshot of lit tracker">
+                        </div>
+                        <div class="button-container">
+                            <a href="https://github.com/lit-tracker-project-6/lit-tracker"><button class="button">Repo</button></a>
+                            <a href="https://lit-tracker.firebaseapp.com/"><button class="button">Live</button></a>
+                        </div>
                     </div>
                 </div>
 
                 <div class="project2 project_container">
-                    <div class="project_textContainer">
+                    <div class="project_textContainer" data-aos="fade-right">
                         <h3>Project 2</h3>
                         <p>Should I get it? Inspired by <a class="link" href="https://isthereanydeal.com/">isthereanydeal</a> this app allows users to quickly search a video game they're interested in to assist with their purchasing decisions.</p>
                         <p>HTML<span>/</span>CSS<span>/</span>Responsive
                         Design<span>/</span>Javascript<span>/</span>React<span>/</span>Git</p>
                     </div>
-                    <div class="project_imgContainer">
-                        <img src="assets/project5.PNG" alt="screenshot of shouldIGetIt">
-                    </div>
-                    <div class="button-container">
-                        <a href="https://github.com/dluudevs/derek-luu-project5"><button class="button">Repo</button></a>
-                        <a href="https://shouldigetit-3aad7.firebaseapp.com/"><button class="button">Live</button></a>
+                    <div class="project_container_bottom" data-aos="fade-left">
+                        <div class="project_imgContainer">
+                            <img src="assets/project5.PNG" alt="screenshot of shouldIGetIt">
+                        </div>
+                        <div class="button-container">
+                            <a href="https://github.com/dluudevs/derek-luu-project5"><button class="button">Repo</button></a>
+                            <a href="https://shouldigetit-3aad7.firebaseapp.com/"><button class="button">Live</button></a>
+                        </div>
                     </div>
                 </div>
 
                 <div class="project3 project_container">
-                    <div class="project_textContainer">
+                    <div class="project_textContainer" data-aos="fade-right">
                         <h3>Project 3</h3>
                         <p>A reponsive multi-page PSD conversion, a desktop design was used as a reference. Mobile design was subject to one's interpretation while maintaining consistency of the desktop design.</p>
                         <p>HTML<span>/</span>CSS<span>/</span>Responsive
                         Design</p>
                     </div>
-                    <div class="project_imgContainer">
-                        <img src="assets/project2.PNG" alt="screenshot of beachstay">
-                    </div>
-                    <div class="button-container">
-                        <a href="https://github.com/dluudevs/derek-luu-project2"><button class="button">Repo</button></a>
-                        <a href="https://dluudevs.github.io/derek-luu-project2/"><button class="button">Live</button></a>
+                    <div class="project_container_bottom" data-aos="fade-left">
+                        <div class="project_imgContainer">
+                            <img src="assets/project2.PNG" alt="screenshot of beachstay">
+                        </div>
+                        <div class="button-container">
+                            <a href="https://github.com/dluudevs/derek-luu-project2"><button class="button">Repo</button></a>
+                            <a href="https://dluudevs.github.io/derek-luu-project2/"><button class="button">Live</button></a>
+                        </div>
                     </div>
                 </div>
 
@@ -155,22 +163,24 @@
                     <input required type="email" id="email" placeholder="Email" name="email">
                     <label for="message" class="visuallyhidden">Message:</label>
                     <textarea placeholder="Message" name="messsage" id="message" cols="30" rows="5"></textarea>
-                    <button class="button" type="submit">Submit</button>
+                    <div class="form_bottom" data-aos="fade-up">
+                        <button class="button" type="submit">Submit</button>
+                        <div class="contact_icons">
+                            <div class="contact_email">
+                                <a href="mailto:derekluudevs@gmail.com"><i class="fas fa-envelope"></i></a>
+                                <p>derekluudevs@gmail.com</p>
+                            </div>
+                            <div class="contact_linkedin">
+                                <a href="https://www.linkedin.com/in/derekluu/"><i class="fab fa-linkedin"></i></a>
+                                <p>LinkedIn</p>
+                            </div>
+                            <div class="contact_github">
+                                <a href="https://github.com/dluudevs"><i class="fab fa-github"></i></a>
+                                <p>Github</p>
+                            </div>
+                        </div>
+                    </div>
                 </form>
-                <div class="contact_icons">
-                    <div class="contact_email">
-                        <a href="mailto:derekluudevs@gmail.com"><i class="fas fa-envelope"></i></a>
-                        <p>derekluudevs@gmail.com</p>
-                    </div>
-                    <div class="contact_linkedin">
-                        <a href="https://www.linkedin.com/in/derekluu/"><i class="fab fa-linkedin"></i></a>
-                        <p>LinkedIn</p>
-                    </div>
-                    <div class="contact_github">
-                        <a href="https://github.com/dluudevs"><i class="fab fa-github"></i></a>
-                        <p>Github</p>
-                    </div>
-                </div>
             </div>
         </section>
     </main>
@@ -183,8 +193,15 @@
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
     <!-- jquery library for transition animations -->
     <script src='scripts/jquery.transit.js'></script>
+    <!-- animate on scroll -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <script>
     $(document).ready(function (){
+        AOS.init({
+            duration: 1500,
+            once: true,
+        });
         $('.hamburger').on('click', function(){
             $(this).toggleClass('is_active');
             toggleMobileMenu();
