media queries to get to tablet viewport

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                 <div class="project2 project_container">
                     <div class="project_textContainer" data-aos="fade-right">
-                        <h3>ShouldIGetIt?</h3>
+                        <h3>ShouldIGetIt</h3>
                         <p>Inspired by <a class="link" href="https://isthereanydeal.com/">isthereanydeal</a> this app allows users to quickly search a video game they're interested in to assist with their purchasing decisions.</p>
                         <p>HTML<span>/</span>CSS<span>/</span>Responsive
                         Design<span>/</span>Javascript<span>/</span>React<span>/</span>Git</p>
