animations are removed when window is resized. but not on mobile load

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
         <div class="fullbleed flex_row">
             <div class="wrapper">
-                <div class="intro" data-aos="fade-left" data-aos-duration="2250">
+                <div class="intro fade__left" data-aos="fade-left" data-aos-duration="2250">
                     <h1><span class="hello">I am </span>Derek Luu </h1>
                     <span class="dev-life">Web Developer</span>
                 </div>
@@ -97,13 +97,13 @@
             <div class="wrapper">
                 <h2>Portfolio</h2>
 
-                <div class="project1 project_container" data-aos="fade-right">
-                    <div class="project_container_top project_textContainer">
+                <div class="project1 project_container">
+                    <div class="project_container_top project_textContainer fade__down"  data-aos="fade-down">
                         <h3>Lit Tracker</h3>
                         <p>Built with React, this app allows you to create your very own book list. Sort your books by ratings, mark them as read or look at other people's list for inspiration!</p>
                         <p>HTML<span>/</span>CSS<span>/</span>Responsive Design<span>/</span>Javascript<span>/</span>React<span>/</span>Git<span>/</span>Firebase</p>
                     </div>
-                    <div class="project_container_bottom" data-aos="fade-left">
+                    <div class="project_container_bottom fade__up" data-aos="fade-up">
                         <div class="project_imgContainer">
                             <img src="assets/project6.PNG" alt="screenshot of lit tracker">
                         </div>
@@ -115,13 +115,13 @@
                 </div>
 
                 <div class="project2 project_container">
-                    <div class="project_container_top project_textContainer" data-aos="fade-right">
+                    <div class="project_container_top project_textContainer fade__down" data-aos="fade-down">
                         <h3>ShouldIGetIt</h3>
                         <p>Inspired by <a class="link" href="https://isthereanydeal.com/">isthereanydeal</a> this app allows users to quickly search a video game they're interested in to assist with their purchasing decisions.</p>
                         <p>HTML<span>/</span>CSS<span>/</span>Responsive
                         Design<span>/</span>Javascript<span>/</span>React<span>/</span>Git</p>
                     </div>
-                    <div class="project_container_bottom" data-aos="fade-left">
+                    <div class="project_container_bottom fade__up" data-aos="fade-up">
                         <div class="project_imgContainer">
                             <img src="assets/project5.PNG" alt="screenshot of shouldIGetIt">
                         </div>
@@ -133,13 +133,13 @@
                 </div>
 
                 <div class="project3 project_container">
-                    <div class="project_container_top project_textContainer" data-aos="fade-right">
+                    <div class="project_container_top project_textContainer fade__up" data-aos="fade-up">
                         <h3>Beachstay</h3>
                         <p>A reponsive multi-page PSD conversion, a desktop design was used as a reference. Mobile design was subject to one's interpretation of the overall design.</p>
                         <p>HTML<span>/</span>CSS<span>/</span>Responsive
                         Design</p>
                     </div>
-                    <div class="project_container_bottom" data-aos="fade-left">
+                    <div class="project_container_bottom fade__down" data-aos="fade-down">
                         <div class="project_imgContainer">
                             <img src="assets/project2.PNG" alt="screenshot of beachstay">
                         </div>
@@ -166,7 +166,7 @@
                         <textarea placeholder="Message" name="messsage" id="message" cols="30" rows="5"></textarea>
                         <button class="button" type="submit">Submit</button>
                     </div>
-                    <div class="form_bottom" data-aos="fade-up">
+                    <div class="form_bottom fade__up" data-aos="fade-up">
                         <p class="email_link hvr-underline-from-center"><a href="mailto:hello@derekluudevs.com">hello@derekluudevs.com</a>
                         </p>
                         <div class="contact_icons">
